--- a/timestampToTime.html
+++ b/timestampToTime.html
@@ -35,6 +35,10 @@
 		}
 		var time = timestampToTime(date);
 		$('.time').append(time);
+		// 时间转时间戳
+		var data2 = new Date('2018-04-26 11:41:20');
+		var timestamp = data2.valueOf();
+		console.log(timestamp);
 	</script>
 </body>
 </html>
